--- a/src/components/manifold-product-page/product-page.css
+++ b/src/components/manifold-product-page/product-page.css
@@ -3,20 +3,18 @@
 }
 
 .grid {
-  @media (min-width: 600px) {
-    display: grid;
-    grid-column-gap: 3rem;
-    grid-template-columns: 1fr 2fr;
-  }
+  display: grid;
+  grid-column-gap: 3rem;
+  grid-template-columns: 1fr;
 
-  @media (min-width: 900px) {
-    grid-template-columns: 1fr 3fr;
+  @media (min-width: 600px) {
+    grid-template-columns: auto 1fr;
   }
 }
 
 .sidebar {
   position: relative;
-  width: 100%;
+  min-width: 15rem;
   max-width: 20rem;
   margin-right: auto;
   margin-left: auto;
